--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-merge": "^5.8.0"
   },
   "scripts": {
+    "local": "node ./app/electron/runner.js",
     "dev-server": "webpack serve --mode development --config ./webpack.development.js",
     "dev": "cross-env NODE_ENV=development electron .",
     "preprod": "webpack --mode production --config ./webpack.production.js",
@@ -65,6 +66,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-router-dom": "^6.3.0"
   }
 }
