--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "sequelize": "^6.21.4",
+    "sqlite3": "^5.0.11"
   }
 }
