--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-hook-form": "^7.34.2",
     "react-router-dom": "^6.3.0",
     "sequelize": "^6.21.4",
-    "sqlite3": "^5.0.11"
+    "sqlite3": "^5.0.11",
+    "swr": "^1.3.0"
   }
 }
