--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@babel/preset-react": "^7.18.6",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
