--- a/.github/workflows/local.yaml
+++ b/.github/workflows/local.yaml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [16.13.0]
 
     steps:
       - uses: actions/checkout@v3
@@ -22,4 +22,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
+      - run: npm run preprod
       - run: npm run dist-mac
