--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "postinstall": "electron-builder install-app-deps",
     "pack": "electron-builder --dir",
     "dist": "npm run preprod && electron-builder",
-    "dist-mac": "npm run preprod && electron-builder --mac",
+    "dist-mac": "npm run preprod && electron-builder --mac --publish=always",
     "dist-linux": "npm run preprod && electron-builder --linux",
     "dist-windows": "npm run preprod && electron-builder --windows"
   },
