--- a/.github/workflows/local.yaml
+++ b/.github/workflows/local.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
  build:
-    runs-on: macos-10.15
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-node@master
@@ -16,9 +16,11 @@ jobs:
         node-version: 16.14.2
     - name: install dependencies
       run: npm install
-    - name: install dmg-license
-      run: npm i dmg-license
-    - name: build
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: npm run dist-mac
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+    # - name: install dmg-license
+    #   run: npm i dmg-license
+    # - name: build
+    #   env:
+    #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   run: npm run dist-mac
